[WIP] displaying discrete mappings by using accordion is not applicable

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,7 +59,9 @@
   "SIDEBAR_EDIT_TOAST_NODES": "Nodes",
   "SIDEBAR_EDIT_TOAST_EDGES": "Edges",
   "SIDEBAR_EDIT_TOAST_DURATION": "Duration",
-  "SIDEBAR_EDIT_CB_LABELS": "Show labels"
+  "SIDEBAR_EDIT_CB_LABELS": "Show labels",
+  "SIDEBAR_EDIT_ASPECTS_NODES": "Nodes",
+  "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges"
 
 
 
