--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -59,6 +59,7 @@
   "SIDEBAR_EDIT_TOAST_NODES": "Knoten",
   "SIDEBAR_EDIT_TOAST_EDGES": "Kanten",
   "SIDEBAR_EDIT_TOAST_DURATION": "Dauer",
-  "SIDEBAR_EDIT_CB_LABELS": "Beschriftungen anzeigen"
-
+  "SIDEBAR_EDIT_CB_LABELS": "Beschriftungen anzeigen",
+  "SIDEBAR_EDIT_ASPECTS_NODES": "Knoten",
+  "SIDEBAR_EDIT_ASPECTS_EDGES": "Kanten"
 }
