[DONE] displaying continuous numeric mappings, now working on solution for hex color codes mapped continuously

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -61,5 +61,7 @@
   "SIDEBAR_EDIT_TOAST_DURATION": "Dauer",
   "SIDEBAR_EDIT_CB_LABELS": "Beschriftungen anzeigen",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Knoten",
-  "SIDEBAR_EDIT_ASPECTS_EDGES": "Kanten"
+  "SIDEBAR_EDIT_ASPECTS_EDGES": "Kanten",
+  "SIDEBAR_EDIT_MAPPED_BY": "verändert in Abhängigkeit von"
+
 }
