--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,7 +61,8 @@
   "SIDEBAR_EDIT_TOAST_DURATION": "Duration",
   "SIDEBAR_EDIT_CB_LABELS": "Show labels",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Nodes",
-  "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges"
+  "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges",
+  "SIDEBAR_EDIT_MAPPED_BY": "mapped by"
 
 
 
