[FIX] resizing main view and sidebar is now also possible for graph view with originally fixed 100% width

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -34,6 +34,7 @@
   "MAIN_STATS_BTN_COMPARE": "Vergleichen",
 
   "MAIN_GRAPH_TITLE": "Graph",
+  "MAIN_GRAPH_BTN_FIT": "Größe anpassen",
 
   "SIDEBAR_MANAGE_TITLE": "Verfügbare Netzwerke",
   "SIDEBAR_MANAGE_NW_NAME": "Netzwerkname",
