--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
   "MAIN_STATS_BTN_COMPARE": "Compare",
 
   "MAIN_GRAPH_TITLE": "Graph",
+  "MAIN_GRAPH_BTN_FIT": "Fit graph",
 
   "SIDEBAR_MANAGE_TITLE": "Available networks",
   "SIDEBAR_MANAGE_NW_NAME": "Network name",
