--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,8 +69,13 @@
   "SIDEBAR_EDIT_CB_LABELS": "Show labels",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Nodes",
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges",
-  "SIDEBAR_EDIT_MAPPED_BY": "mapped by"
-
+  "SIDEBAR_EDIT_MAPPED_BY": "mapped by",
+  "SIDEBAR_EDIT_COMPARISON_NODES": "Nodes",
+  "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Node name",
+  "SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES": "Node attributes",
+  "SIDEBAR_EDIT_COMPARISON_EDGES": "Edges",
+  "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Edge name",
+  "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Edge attributes"
 
 
 }
