--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -66,6 +66,8 @@
   "SIDEBAR_EDIT_TOAST_EDGES": "Kanten",
   "SIDEBAR_EDIT_TOAST_DURATION": "Dauer",
   "SIDEBAR_EDIT_CB_LABELS": "Beschriftungen anzeigen",
+  "SIDEBAR_EDIT_CB_NODES_ATTRIBUTES": "Alle Knotenattribute anzeigen",
+  "SIDEBAR_EDIT_CB_EDGES_ATTRIBUTES": "Alle Kantenattribute anzeigen",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Knoten",
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Kanten",
   "SIDEBAR_EDIT_MAPPED_BY": "verändert in Abhängigkeit von",
