--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,6 +67,8 @@
   "SIDEBAR_EDIT_TOAST_EDGES": "Edges",
   "SIDEBAR_EDIT_TOAST_DURATION": "Duration",
   "SIDEBAR_EDIT_CB_LABELS": "Show labels",
+  "SIDEBAR_EDIT_CB_NODES_ATTRIBUTES": "Show all nodes attributes",
+  "SIDEBAR_EDIT_CB_EDGES_ATTRIBUTES": "Show all edges attributes",
   "SIDEBAR_EDIT_ASPECTS_NODES": "Nodes",
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges",
   "SIDEBAR_EDIT_MAPPED_BY": "mapped by",
