--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -89,7 +89,10 @@
   "MAIN_MAPPINGS_TITLE_LIST": "Liste aller Mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
   "MAIN_MAPPINGS_EDIT": "Mapping bearbeiten",
-  "MAIN_MAPPINGS_DELETE": "Mapping entfernen"
+  "MAIN_MAPPINGS_DELETE": "Mapping entfernen",
+  "MAIN_MAPPINGS_CONFIRM_DELETION": "Möchtest du das oben dargestellte Mapping wirklich löschen?",
+  "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "Ja, lösch' es endlich",
+  "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Hab' mich geirrt"
 
 
 }
