[DONE] reworked selected elements display within sidebar

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -73,11 +73,13 @@
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Kanten",
   "SIDEBAR_EDIT_MAPPED_BY": "verändert in Abhängigkeit von",
   "SIDEBAR_EDIT_COMPARISON_NODES": "Knoten",
-  "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Knotenname",
+  "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Knotenname (ID)",
   "SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES": "Knotenattribute",
   "SIDEBAR_EDIT_COMPARISON_EDGES": "Kanten",
-  "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Kantenname",
+  "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Kantenname (ID)",
   "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Kantenattribute",
+  "SIDEBAR_EDIT_TT_HIGHLIGHT_NODE": "Knoten hervorheben | ID:",
+  "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Kante hervorheben | ID:",
 
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
   "MAIN_MAPPINGS_TITLE_NODES_DISCRETE": "Diskrete Knotenmappings",
