--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,11 +74,13 @@
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges",
   "SIDEBAR_EDIT_MAPPED_BY": "mapped by",
   "SIDEBAR_EDIT_COMPARISON_NODES": "Nodes",
-  "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Node name",
+  "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Node name (ID)",
   "SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES": "Node attributes",
   "SIDEBAR_EDIT_COMPARISON_EDGES": "Edges",
-  "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Edge name",
+  "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Edge name (ID)",
   "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Edge attributes",
+  "SIDEBAR_EDIT_TT_HIGHLIGHT_NODE": "Highlight node",
+  "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Highlight edge",
 
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
   "MAIN_MAPPINGS_TITLE_NODES_DISCRETE": "Discrete node mappings",
