[WIP] chart for new discrete mappings

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -108,7 +108,10 @@
   "MAIN_MAPPINGS_NEW_TYPE_NC": "Knoten - kontinuierlich",
   "MAIN_MAPPINGS_NEW_TYPE_ED": "Kanten - diskret",
   "MAIN_MAPPINGS_NEW_TYPE_EC": "Kanten - kontinuierlich",
-  "MAIN_MAPPINGS_NEW_PLACEHOLDER": "Neuer Wert"
+  "MAIN_MAPPINGS_NEW_PLACEHOLDER": "Neuer Wert",
+  "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "Zu setzende CSS-Eigenschaft",
+  "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Hier kann ein neues Mapping angelegt werden. Die gewählte Eigenschaft hat die in nachfolgendem Formular aufgeführten Ausprägungen. Jede dieser Ausprägungen kann mit einem Wert versehen werden, den die ausgewählte CSS-Eigenschaft einnehmen soll. Die CSS-Eigenschaft wird durch Eingabe ins Textfeld festgelegt. Ob eine solche CSS-Eigenschaft existiert, wird nicht validiert.",
+  "MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE": "Ausgewähltes Attribut"
 
 
 }
