--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,7 +108,11 @@
   "MAIN_MAPPINGS_NEW_TYPE_NC": "Nodes - continuous",
   "MAIN_MAPPINGS_NEW_TYPE_ED": "Edges - discrete",
   "MAIN_MAPPINGS_NEW_TYPE_EC": "Edges - continuous",
-  "MAIN_MAPPINGS_NEW_PLACEHOLDER": "New value"
+  "MAIN_MAPPINGS_NEW_PLACEHOLDER": "New value",
+  "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "CSS property",
+  "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Create a new mapping here. The selected attribute's values are listed in the form below. Each of these values can be mapped to a specific CSS value. Enter the CSS property's key into the specified field to map it by your selected attribute. Validation if such a CSS property exists is not provided.",
+  "MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE": "Selected attribute"
+
 
 
 }
