--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -112,7 +112,10 @@
   "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "Zu setzende CSS-Eigenschaft",
   "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Hier kann ein neues Mapping angelegt werden. Die gewählte Eigenschaft hat die in nachfolgendem Formular aufgeführten Ausprägungen. Jede dieser Ausprägungen kann mit einem Wert versehen werden, den die ausgewählte CSS-Eigenschaft einnehmen soll. Die CSS-Eigenschaft wird durch Eingabe ins Textfeld festgelegt. Ob eine solche CSS-Eigenschaft existiert, wird nicht validiert.",
   "MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE": "Ausgewähltes Attribut",
-  "MAIN_MAPPINGS_NEW_TT_DISTRIBUTION": "Verteilung der Ausprägungen für dieses Attribut"
+  "MAIN_MAPPINGS_NEW_TT_DISTRIBUTION": "Verteilung der Ausprägungen für dieses Attribut",
+  "MAIN_MAPPINGS_NEW_CSS_HINT": "Gib den Namen einer CSS Eigenschaft ein, die entsprechend der Attributausprägungen verändert werden soll",
+  "MAIN_MAPPINGS_NEW_COLOR_PREVIEW": "Vorschau für die gesetzten Farbwerte",
+  "MAIN_MAPPINGS_NEW_COLOR_HINT": "Farben müssen mit # anfangen und mit sechs Zeichen spezifiziert sein"
 
 
 }
