[WIP] finalizing new discrete mappings

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -98,9 +98,12 @@
   "MAIN_MAPPINGS_NEW": "Neu",
   "MAIN_MAPPINGS_TITLE_LIST": "Liste aller Mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
-  "MAIN_MAPPINGS_TT_EDIT": "Mapping bearbeiten",
+  "MAIN_MAPPINGS_TT_EDIT": "Dieses Mapping bearbeiten",
+  "MAIN_MAPPINGS_TT_SINGLE_EDIT": "Diesen Eintrag bearbeiten",
   "MAIN_MAPPINGS_TT_NEW": "Neues Mapping anlegen",
   "MAIN_MAPPINGS_DELETE": "Alle auf dieses Attribut gemappte Styles entfernen",
+  "MAIN_MAPPINGS_TT_DELETE": "Alle Eigenschaften, die entsprechend dieses Attributes verwaltet werden, werden hiermit gelöscht",
+  "MAIN_MAPPINGS_TT_SINGLE_DELETE": "Diesen Eintrag löschen",
   "MAIN_MAPPINGS_CONFIRM_DELETION": "Möchtest du das oben dargestellte Mapping wirklich löschen?",
   "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "Ja, lösch' es endlich",
   "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Hab' mich geirrt",
