--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -99,8 +99,11 @@
   "MAIN_MAPPINGS_TITLE_LIST": "Existing mappings",
   "MAIN_MAPPINGS_DETAILS": "Details",
   "MAIN_MAPPINGS_TT_EDIT": "Edit this mapping",
+  "MAIN_MAPPINGS_TT_SINGLE_EDIT": "Edit this line",
   "MAIN_MAPPINGS_TT_NEW": "Create new mapping",
   "MAIN_MAPPINGS_DELETE": "Delete all style properties mapped by this attribute",
+  "MAIN_MAPPINGS_TT_DELETE": "All above defined style properties are deleted by this",
+  "MAIN_MAPPINGS_TT_SINGLE_DELETE": "Remove this line",
   "MAIN_MAPPINGS_CONFIRM_DELETION": "Are you really sure you want to delete the mapping above?",
   "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "I'm pretty sure, delete this",
   "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Never mind",
