--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -127,7 +127,8 @@
   "MAIN_MAPPINGS_NEW_COLOR_HINT": "Colors must begin with # and have six letters",
   "MAIN_MAPPINGS_NEW_SUBMIT": "Submit new mapping",
   "MAIN_MAPPINGS_NEW_ABORT": "Abort and return to graph",
-  "MAIN_MAPPINGS_NEW_CLEAR": "Clear all fields"
+  "MAIN_MAPPINGS_NEW_CLEAR": "Clear all fields",
+  "MAIN_MAPPINGS_NEW_CB_COLORS": "Evaluate as color property"
 
 
 
