--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -88,6 +88,8 @@
   "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Edge attributes",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_NODE": "Highlight node",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE": "Highlight edge",
+  "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Manage existing mappings and create new ones",
+  "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Create and manage mappings",
 
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
   "MAIN_MAPPINGS_TITLE_NODES_DISCRETE": "Discrete node mappings",
