--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -135,5 +135,10 @@
   "MAIN_MAPPINGS_NEW_DEFAULT_GREAT": "Default for all greater values",
   "MAIN_MAPPINGS_NEW_ALREADY_EXISTS": "A mapping for this attribute-css-combination already exists",
   "MAIN_MAPPINGS_NEW_EDIT_INSTEAD": "Creating a second one is usually a bad idea. Do you want to edit the existing one?",
-  "MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD": "Edit existing mapping"
+  "MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD": "Edit existing mapping",
+  "MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING": "Default values are your friends!",
+  "MAIN_MAPPINGS_NEW_DEFAULT_HINT": "Though they don't impact your imminent mapping, default values are essential if you are making changes to your graph later on, e.g. add nodes or edges. It is recommended that the complete range of your selected attribute is covered not be relying on default values.",
+  "MAIN_MAPPINGS_NEW_CURRENT_MIN": "Current minimum (recommended threshold#1)",
+  "MAIN_MAPPINGS_NEW_CURRENT_MAX": "Current maximum (recommended threshold#2)"
+
 }
