--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,6 +107,7 @@
   "MAIN_MAPPINGS_TT_DELETE": "All above defined style properties are deleted by this",
   "MAIN_MAPPINGS_TT_SINGLE_DELETE": "Remove this line",
   "MAIN_MAPPINGS_CONFIRM_DELETION": "Are you really sure you want to delete the mapping above?",
+  "MAIN_MAPPINGS_SINGLE_CONFIRM_DELETION": "Are you really sure you want to delete this property from the mapping?",
   "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "I'm pretty sure, delete this",
   "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Never mind",
   "MAIN_MAPPINGS_TT_MAP_DETAILS": "Show details in table above",
