--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -45,6 +45,7 @@
   "SIDEBAR_MANAGE_NW_NAME": "Netzwerkname",
   "SIDEBAR_MANAGE_TT_INFO": "Info über dieses Netzwerk",
   "SIDEBAR_MANAGE_TT_EDIT": "Dieses Netzwerk rendern und bearbeiten",
+  "SIDEBAR_MANAGE_TT_DOWNLOAD": "Als .cx Datei herunterladen",
   "SIDEBAR_MANAGE_HELP": "Brauchst du Hilfe?",
   "SIDEBAR_MANAGE_TT_HELP": "Tipps und erste Schritte",
   "SIDEBAR_MANAGE_LOCAL_FILE_LABEL": "Lokale Dateien",
